<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="listener"
            type="in.fitsapp.sheliza.gocar.MainActivity" />
    </data>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
   <FrameLayout
       android:layout_width="match_parent"
       android:layout_height="@dimen/margin_250"
       android:layout_marginBottom="@dimen/margin_10">

       <ImageView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:scaleType="fitXY"
           android:src="@drawable/car" />

       <androidx.appcompat.widget.AppCompatButton
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center|bottom"
           android:layout_marginBottom="@dimen/margin_10"
           android:background="@drawable/border"
           android:backgroundTint="@color/text_background"
           android:fontFamily="@font/poppins_light"
           android:paddingLeft="@dimen/margin_20"
           android:paddingRight="@dimen/margin_20"
           android:text="@string/upload"
           android:textColor="@color/colorWhite" />

   </FrameLayout>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_marginBottom="@dimen/margin_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/StyledTilEditText"
        android:hint="@string/companyname"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/about_me"
        style="@style/StyledTilEditText"
        android:layout_marginBottom="@dimen/margin_10"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/location"
        style="@style/StyledTilEditText"
        android:layout_marginBottom="@dimen/margin_10"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        style="@style/StyledTilEditText"
        android:layout_marginBottom="@dimen/margin_10"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        style="@style/StyledTilEditText"
        android:layout_marginBottom="@dimen/margin_10"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/timings"
        android:id="@+id/timings"
        android:onClick="@{(v)->listener.onClick(v)}"
android:fontFamily="@font/poppins_light"
        android:padding="@dimen/margin_5"
        android:layout_marginBottom="@dimen/margin_10"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_1"
        android:background="@color/backgroundcolor"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/margin_5"
        android:layout_marginBottom="@dimen/margin_10">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_light"

            android:hint="@string/skills"/>
        <TextView
            android:id="@+id/add_skills"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:onClick="@{(v)->listener.onClick(v)}"

            android:fontFamily="@font/poppins_light"
            android:textColor="@color/textColor"
            android:layout_marginRight="@dimen/margin_20"
            android:text="@string/add_skills"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_1"
        android:background="@color/backgroundcolor"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:paddingBottom="@dimen/margin_10">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_light"

            android:gravity="center|start"
            android:hint="@string/password"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right|center"

            android:fontFamily="@font/poppins_light"
            android:layout_marginRight="@dimen/margin_20"
            android:textColor="@color/textColor"
            android:text="@string/change_password"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_1"
        android:background="@color/backgroundcolor"/>

    <Button

android:layout_marginTop="@dimen/margin_5"
        android:layout_gravity="center"
        android:background="@drawable/border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_15"
        android:textColor="@color/colorWhite"
        android:text="@string/save_btn"/>




</LinearLayout>
</layout>