<?xml version="1.0" encoding="utf-8"?>
<layout>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_skill_dialog"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/txt_size_16"
                android:layout_marginBottom="@dimen/margin_8"
                android:textColor="@color/colorblack"
                android:layout_marginTop="@dimen/margin_16"
                android:text="@string/txt_your_skills" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8"
                android:layout_marginLeft="@dimen/margin_8"
                android:layout_marginEnd="@dimen/margin_8"
                android:layout_marginRight="@dimen/margin_8"
                android:layout_marginTop="@dimen/margin_16"
                android:entries="@array/brand_names"

                style="@style/Widget.AppCompat.Spinner.DropDown"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8"
                android:layout_marginLeft="@dimen/margin_8"
                android:layout_marginEnd="@dimen/margin_8"
                android:layout_marginRight="@dimen/margin_8"
                android:layout_marginTop="@dimen/margin_16"
                android:entries="@array/car_names"

                style="@style/Widget.AppCompat.Spinner.DropDown"/>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8"
                android:layout_marginLeft="@dimen/margin_8"
                android:layout_marginEnd="@dimen/margin_8"
                android:layout_marginRight="@dimen/margin_8"
                android:layout_marginTop="@dimen/margin_16"
                android:entries="@array/vehicle_names"

                style="@style/Widget.AppCompat.Spinner.DropDown"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8"
                android:layout_marginLeft="@dimen/margin_8"
                android:layout_marginEnd="@dimen/margin_8"
                android:layout_marginRight="@dimen/margin_8"
                android:layout_marginTop="@dimen/margin_16"
                android:entries="@array/fuel_types"

                style="@style/Widget.AppCompat.Spinner.DropDown"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8"
                android:layout_marginLeft="@dimen/margin_8"
                android:layout_marginEnd="@dimen/margin_8"
                android:layout_marginRight="@dimen/margin_8"
                android:layout_marginTop="@dimen/margin_16"
                android:text="@string/txt_set_price"
                android:background="@drawable/bg_set_price"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_add"
                android:textStyle="bold"

                android:drawablePadding="@dimen/margin_4"
                android:drawableLeft="@drawable/ic_add_black"
                android:drawableStart="@drawable/ic_add_black"
                android:background="@drawable/bg_add"
                android:layout_marginTop="@dimen/margin_64"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:text="@string/txt_save_amp_back"
            android:textStyle="bold"
            android:textSize="@dimen/txt_size_16"
            android:background="@drawable/bg_save_and_back"
            android:layout_marginBottom="@dimen/margin_20"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>



</layout>
