<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llYourSkill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="@dimen/margin_24"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_16"
            android:text="@string/txt_weekly_detail"
            android:textColor="@color/colorblack"
            android:textSize="@dimen/txt_size_16" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvSunday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/margin_28"
                    android:layout_marginRight="@dimen/margin_28"
                    android:text="@string/txt_sunday"
                    android:textSize="@dimen/txt_size_14"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/ivDeleteOne"
                    android:layout_toLeftOf="@+id/ivDeleteOne"
                    android:layout_toEndOf="@+id/tvSunday"
                    android:layout_toRightOf="@+id/tvSunday"
                    android:text="@string/txt_closed"
                    android:textSize="@dimen/txt_size_14"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/ivDeleteOne"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:contentDescription="@string/txt_image_delete"
                    android:src="@drawable/ic_delete" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_1"
                android:layout_marginTop="@dimen/margin_4"
                android:layout_marginEnd="@dimen/margin_8"
                android:layout_marginRight="@dimen/margin_8"
                android:layout_marginBottom="@dimen/margin_12"
                android:background="@color/colorLightGrey" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvSundayTwo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/margin_28"
                    android:layout_marginRight="@dimen/margin_28"
                    android:text="@string/txt_sunday"
                    android:textSize="@dimen/txt_size_14"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/ivDeleteTwo"
                    android:layout_toLeftOf="@+id/ivDeleteTwo"
                    android:layout_toEndOf="@+id/tvSundayTwo"
                    android:layout_toRightOf="@+id/tvSundayTwo"
                    android:text="11:40 Am - 12:40PM"
                    android:textColor="@color/colorblack" />

                <ImageView
                    android:id="@+id/ivDeleteTwo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:contentDescription="@string/txt_image_delete"
                    android:src="@drawable/ic_delete" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_1"
                android:layout_marginTop="@dimen/margin_4"
                android:layout_marginEnd="@dimen/margin_8"
                android:layout_marginRight="@dimen/margin_8"
                android:layout_marginBottom="@dimen/margin_8"
                android:background="@color/colorLightGrey" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvSundayThree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/margin_28"
                    android:layout_marginRight="@dimen/margin_28"
                    android:text="@string/txt_sunday"
                    android:textSize="@dimen/txt_size_14"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/ivDeleteThree"
                    android:layout_toLeftOf="@+id/ivDeleteThree"
                    android:layout_toEndOf="@+id/tvSundayThree"
                    android:layout_toRightOf="@+id/tvSundayThree"
                    android:text="11:40 Am - 12:40PM"
                    android:textColor="@color/colorblack" />

                <ImageView
                    android:id="@+id/ivDeleteThree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:contentDescription="@string/txt_image_delete"
                    android:src="@drawable/ic_delete" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_1"
                android:layout_marginTop="@dimen/margin_4"
                android:layout_marginEnd="@dimen/margin_8"
                android:layout_marginRight="@dimen/margin_8"
                android:background="@color/colorLightGrey" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_marginLeft="@dimen/margin_8"
        android:layout_marginEnd="@dimen/margin_8"
        android:layout_marginRight="@dimen/margin_8"
        android:layout_marginBottom="@dimen/margin_16"
        android:background="@drawable/bg_set_time"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/tvSaveAndBack"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llYourSkill">

        <Spinner
            style="@style/Widget.AppCompat.Spinner.DropDown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginLeft="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_24"
            android:layout_marginEnd="@dimen/margin_16"
            android:layout_marginRight="@dimen/margin_16"

            android:entries="@array/brand_names" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_marginBottom="@dimen/margin_16"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/margin_16"
                android:layout_marginRight="@dimen/margin_16"
                android:text="@string/txt_start_time"
                android:textStyle="bold" />

            <View
                android:layout_width="@dimen/margin_1"
                android:layout_height="@dimen/margin_38"
                android:layout_gravity="center_vertical"
                android:background="@color/colorLightGrey" />

            <NumberPicker
                android:id="@+id/npFirstStartTimeHr"
                android:layout_width="@dimen/margin_24"
                android:layout_height="@dimen/margin_64"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/margin_6"
                android:divider="@color/colorNumberPicker"
                android:solidColor="@color/colorNumberPicker" />

            <View
                android:layout_width="@dimen/margin_1"
                android:layout_height="@dimen/margin_38"
                android:layout_gravity="center_vertical"
                android:background="@color/colorLightGrey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/margin_12"
                android:text="@string/txt_hr" />

            <View
                android:layout_width="@dimen/margin_1"
                android:layout_height="@dimen/margin_38"
                android:layout_gravity="center_vertical"
                android:background="@color/colorLightGrey" />

            <NumberPicker
                android:id="@+id/npFirstStartTimeMin"
                android:layout_width="@dimen/margin_24"
                android:layout_height="@dimen/margin_64"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/margin_6"
                android:divider="@color/colorNumberPicker"
                android:solidColor="@color/colorNumberPicker" />

            <View
                android:layout_width="@dimen/margin_1"
                android:layout_height="@dimen/margin_38"
                android:layout_gravity="center_vertical"
                android:background="@color/colorLightGrey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/margin_12"
                android:text="@string/txt_min" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_12"
            android:layout_marginBottom="@dimen/margin_16"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/margin_16"
                android:layout_marginRight="@dimen/margin_16"
                android:text="@string/txt_start_time"
                android:textStyle="bold" />

            <View
                android:layout_width="@dimen/margin_1"
                android:layout_height="@dimen/margin_38"
                android:layout_gravity="center_vertical"
                android:background="@color/colorLightGrey" />

            <NumberPicker
                android:id="@+id/npSecondStartTimeHr"
                android:layout_width="@dimen/margin_24"
                android:layout_height="@dimen/margin_64"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/margin_6"
                android:divider="@color/colorNumberPicker"
                android:solidColor="@color/colorNumberPicker" />

            <View
                android:layout_width="@dimen/margin_1"
                android:layout_height="@dimen/margin_38"
                android:layout_gravity="center_vertical"
                android:background="@color/colorLightGrey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/margin_12"
                android:text="@string/txt_hr" />

            <View
                android:layout_width="@dimen/margin_1"
                android:layout_height="@dimen/margin_38"
                android:layout_gravity="center_vertical"
                android:background="@color/colorLightGrey" />

            <NumberPicker
                android:id="@+id/npSecondStartTimeMin"
                android:layout_width="@dimen/margin_24"
                android:layout_height="@dimen/margin_64"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/margin_6"
                android:divider="@color/colorNumberPicker"
                android:solidColor="@color/colorNumberPicker" />

            <View
                android:layout_width="@dimen/margin_1"
                android:layout_height="@dimen/margin_38"
                android:layout_gravity="center_vertical"
                android:background="@color/colorLightGrey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/margin_12"
                android:text="@string/txt_min" />

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginBottom="@dimen/margin_16"
            android:background="@drawable/bg_add"
            android:drawablePadding="@dimen/margin_4"
            android:text="@string/txt_add"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvSaveAndBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginBottom="@dimen/margin_16"
        android:background="@drawable/bg_save_and_back"
        android:text="@string/txt_save_amp_back"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/txt_size_16"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>